<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="tipa">Getting started</string>
    <string name="tipatitle">If you want to start immediately, click on the search button</string>
    <string name="tipb">Change stations</string>
    <string name="tipbtitle">If you want to look for an other trip, click on a station name and pick up an other one. </string>
    <string name="tipc">Change date/Time</string>
    <string name="tipctitle">Click on the date and time fields in the upper part to change your desired trip time.</string>
    <string name="tipd">Main menu</string>
    <string name="tipdtitle">Use the \nHome\n icon in the upper left part to go the the main menu.</string>
    <string name="tipe">Change first screen</string>
    <string name="tipetitle">If you want to start on other screen, you can configure that in the settings.</string>
    <string name="app_name">BeTrains</string>
    <string name="btn_home_planner">Route Planner</string>
    <string name="btn_home_chat">Chat</string>
    <string name="btn_home_notif">Notifications</string>
    <string name="btn_home_traffic">Traffic Issues</string>
    <string name="btn_home_settings">Settings</string>
    <string name="btn_home_help">Help</string>
    <string name="btn_home_starred">Starred</string>
    <string name="txt_loading">Loading...</string>
    <string name="txt_patient">Please be patient...</string>
    <string name="txt_traffic_issues">Traffic Issues</string>
    <string name="txt_no_issue">No traffic issue</string>
    <string name="txt_duration">Dur:</string>
    <string name="txt_search">Search</string>
    <string name="api_key_prod">0K7Fau7cA-pYcbx1Ya_FeGZtHNa2af8KsUiryOg</string>
    <string name="add_widget">Add to Widget</string>
    <string name="url_lang">en</string>
    <string name="url_lang_2">fr</string>
    <string name="txt_connection">Please check your Internet connection.</string>
    <string name="txt_def_title">Default Title</string>
    <string name="txt_type_subway">Subway</string>
    <string name="txt_type_walk">Walk</string>
    <string name="txt_your_train">Your Train</string>
    <string name="txt_load_message">Loading last Message</string>
    <string name="txt_no_message">No message.</string>
    <string name="api_key_debug">0K7Fau7cA-paYlUgd1I0OkvAE0xc8tN04C6qcMA</string>
    <string name="wid_empty">Open your train information and click \'Add to widget\'".
	</string>
    <string name="wid_confirm">Add to Widget?</string>
    <string name="wid_added">%s added to widget</string>
    <string name="txt_messages">Messages</string>
    <string name="txt_more_messages">More messages</string>
    <string name="txt_change">Change</string>
    <string name="settings_display_lm_desc">Under train information</string>
    <string name="settings_display_lm">Display Last Message</string>
    <string name="settings_pseudo">Nickname</string>
    <string name="settings_fullscreen">Fullscreen</string>
    <string name="settings_restart">You\'ll need to restart BETrains</string>
    <string name="settings_force_dutch">Force Dutch/Nederlands</string>
    <string name="settings_english">Only for english users</string>
    <string name="txt_filter_message">Please enter a train Number</string>
    <string name="txt_filter">Filter</string>
    <string name="txt_numberoftrains">Trains : </string>
    <string name="txt_station">Station</string>
    <string name="txt_confirm_map">Launch Google Maps?</string>
    <string name="txt_confirm_nav">Launch Google Nav?</string>
    <string name="txt_add_fav">Add to fav.</string>
    <string name="txt_train">Train</string>
    <string name="txt_trip">Trip</string>
    <string name="txt_infrabel">This info comes from the Infrabel/Railtime website. Delays smaller than 5 minutes are not shown, and might be slightly different from previous page.</string>
    <string name="fav_no_fav_body">you can add your favorite stations, trains and
		trips here.\n\n* Add a favorite station by long-pressing it in the
		station list\n\n* Add a Train by pressing menu in the train view\n\n*
		Press "menu" key when you are on the route planner to add a trip.
	</string>
    <string name="fav_no_fav_title">No starred items</string>
    <string name="txt_remove">Delete</string>
    <string name="search_wrong_string">Please pick a station in the list or write a train
		number: ex: "984" for IC 984</string>
    <string name="search_hint">Train nb. / Station</string>
    <string name="changelog">v 2.0.2\n\n* New Feature: find closest station\n\n*
		User Interface Improved\n\n* Sorry, all you favorites stations are
		lost. I needed to rewrite the Database. That won\'t happen again
	</string>
    <string name="changelog_title">ChangeLog</string>
    <string name="confirm_message_train">Open train %s messages?</string>
    <string name="confirm_info_train">Open train %s infos?</string>
    <string name="txt_server_down">Server down</string>
    <string name="txt_map">Map</string>
    <string name="txt_nav">Navigation</string>
    <string name="txt_invert_da">Departure/Arrival</string>
    <string name="txt_date">Date</string>
    <string name="txt_time">Time</string>
    <string name="settings_planner_da">Arrival/Departure time.</string>
    <string name="settings_planner_da_summary">...</string>
    <string name="settings_activity">First Screen.</string>
    <string name="settings_activity_summary">Where to start the application?</string>
    <string name="key_train_only">OnlyTrainPref</string>
    <string name="settings_train_only_summary">Will not show buses and subway</string>
    <string name="key_planner_da">Plannerdapref</string>
    <string name="key_activity">Activitypref</string>
    <string name="settings_train_only">Train Only</string>
    <string name="txt_no_driving">No Info on this train</string>
    <string name="txt_no_result">Sorry, no result.</string>
    <string name="txt_error">Something went wrong. Please check your connection
		again. Maybe our server is down...</string>
    <string name="txt_create_connections">Please update your search to see your trip
		informations.</string>
    <string name="btn_closest_stations">Closest Stations</string>
    <string name="txt_first_dl">The station list download will start. This is a
		slow process,
		but next time you will use it, everything will be faster.
	</string>
    <string name="txt_accuracy">Accuracy: %sm.</string>
    <string name="txt_wait_gps">Waiting for GPS fix.</string>
    <string name="update_gps_btn">Update:\n%sm</string>
    <string name="txt_info_station">Info station</string>
    <string name="txt_dl_stations">Downloading stations list</string>
    <string name="txt_fill_closest">Looking for closest station</string>
    <string name="txt_sort">Sorting list...</string>
    <string name="txt_location">If you cannot get GPS position, please enable it by
		clicking here.</string>
    <string name="pref_selectTrain">Your train</string>
    <string name="pref_stations">Stations to check</string>
    <string name="pref_weekdays">Days to check</string>
    <string name="pref_selectStartHour">Start updates at:</string>
    <string name="pref_selectEndHour">Stop updates at:</string>
    <string name="pref_selectFreq">Updates frequency</string>
    <string name="pref_selectStartHour_sum">Help your battery by avoiding updates during the night</string>
    <string name="pref_selectEndHour_sum">Help your battery by avoiding updates during the night</string>
    <string name="pref_selectFreq_sum">1 hour</string>
<string name="stationpicker">Pick a Station</string>
        
        
</resources>