<?xml version="1.0" encoding="utf-8"?>


<FrameLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="0dp" android:layout_width="fill_parent"
	android:layout_weight="1">

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical" android:background="#FFFFFFFF">
		<include layout="@layout/colorstrip" />

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView android:id="@+id/pseudo" style="@style/HomeButton"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="0dip" android:layout_weight="1"
				android:layout_height="wrap_content" android:layout_gravity="center"
				android:gravity="center" android:text="Titre"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:paddingBottom="10dip" android:paddingTop="10dip" />
			<Button android:id="@+id/settings" android:text="@string/txt_change"
				android:layout_width="wrap_content" android:layout_height="wrap_content" />
		</LinearLayout>

		<include layout="@layout/colorstrip" />
		<!-- <ScrollView android:id="@+id/sv" android:layout_width="fill_parent" 
			android:layout_height="0dip" android:layout_weight="1" android:paddingTop="9dip"> 
			<TextView android:id="@+id/messagesblock" style="@style/TextElement" android:gravity="top|left" 
			android:paddingLeft="6dip" xmlns:android="http://schemas.android.com/apk/res/android" 
			android:layout_width="wrap_content" android:layout_height="wrap_content" 
			android:layout_gravity="top" android:text="@string/txt_loading" /> </ScrollView> -->
		<ListView android:id="@android:id/list" style="@style/TextElement"
			android:gravity="top|left" android:paddingLeft="6dip"
			android:paddingRight="6dip" xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="0dip"
			android:layout_weight="1" android:cacheColorHint="#00000000"
			android:text="@string/txt_loading" />
		<TextView android:id="@android:id/empty"
			android:layout_width="fill_parent" android:layout_height="0dip"
			android:layout_weight="1" android:text="@string/txt_loading" style="@style/TextElement" />



		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal" android:id="@+id/send_layout"
			android:layout_gravity="bottom">

			<EditText android:id="@+id/yourmessage"
				xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="0dip" android:layout_height="wrap_content"
				android:layout_weight="5" />
			<Button android:id="@+id/send" android:text="send"
				android:layout_width="0dip" android:layout_weight="1"
				android:layout_height="wrap_content" />
		</LinearLayout>

		<Button android:id="@+id/more" android:text="@string/txt_more_messages"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center" />

	</LinearLayout>

</FrameLayout>

